--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ChooseGameActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity
+            android:name=".StartGameFlashActivity"
+            android:screenOrientation="landscape" />
 
         <uses-library
             android:name="com.google.android.things"
